--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1123,8 +1123,6 @@ $modal-header-padding-y:            .125rem !default; // Boosted mod
 $modal-header-padding-x:            .25rem !default; // Boosted mod
 $modal-header-padding:              null !default; // Keep this for backwards compatibility
 
-$modal-xl:                          700px !default;
-$modal-lg:                          700px !default;
 $modal-md:                          700px !default;
 $modal-sm:                          300px !default;
 
